# pytest-optional-tests

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  pytest_optional_tests.py  setup.cfg  tox.ini
docs/: index.md
src/: pytest_optional_tests.py
tests/: conftest.py  test_optional_tests.py
tests/data/: x-pytest.ini  x-test_pot.py
tests/examples/: pytest.ini  test_pot.py
