[metadata]
# version is extracted from SCM tag by setuptools_scm
author = Reece Hart
author-email = reecehart@gmail.com
description = Easy declaration of optional tests (i.e., that are not run by default)
home-page = https://github.com/reece/pytest-optional-tests
license = MIT
name = pytest-optional-tests
platform = any
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License


[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >= 2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
zip_safe = true
py_modules = pytest_optional_tests
install_requires =
    pytest >= 3.5.0
setup_requires =
    pytest-runner
    setuptools_scm


[options.entry_points]
pytest11 =
    optional-tests = pytest_optional_tests


[aliases]
test = pytest


# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
[flake8]
max-line-length = 120
exclude =
    .eggs
    .tox
    build
    dist
    docs/conf.py
    tests/*
max-complexity = 10
ignore = E129,E221,E241,E251,E303,W291

